fix: attempt fix on LinkedIn icon comes up yellow on top menu open on mobile device;

--- a/css/agency.css
+++ b/css/agency.css
@@ -104,12 +104,12 @@ body {
 	color: #fff;
 	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-#mainNav .navbar-nav .nav-item .nav-icon {
-  color: white;
+#mainNav .navbar-nav .nav-item .nav-icon,
+#mainNav .navbar-nav .nav-item .nav-icon:active {
+	color: #fff;
 }
-
 #mainNav .navbar-nav .nav-item .nav-icon:hover {
-  color: #fed136;
+	color: #fed136;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
 	font-size: 90%;
@@ -141,7 +141,7 @@ body {
 		transition: all 0.3s;
 	}
 	#mainNav .navbar-nav .nav-item .nav-link .nav-text {
-		padding: 1.1em 1em !important;
+        padding: 1.1em 1em !important;
 	}
 	#mainNav.navbar-shrink {
 		padding-top: 0;
